data/e_coli/NC_000913.3/meme-chip/cra_glucose/dreme_msgs.txt
  File "/home/katherine/anaconda3/bin/dreme", line 760
    print "Finding secondary RE in left flank..."
                                                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Finding secondary RE in left flank...")?
